Fix dialog overflow

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@ html, body, #root, .App {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  position: relative;
 }
 
 ::-webkit-scrollbar {
