--- a/src/Components/Channels/Channel/Channel.css
+++ b/src/Components/Channels/Channel/Channel.css
@@ -7,6 +7,8 @@
   flex-direction: column;
   align-items: flex-start;
 
+  gap: var(--global-margin);
+
   width: 100%;
 }
 
